# sanctum-spl-stake-pool-cli

./: .gitignore  package-lock.json  platform-keypair.json
.claude/hooks/: session-start.sh
client/: setup.ts
gacha/: ANNOUNCEMENT-DEGEN.md  ANNOUNCEMENT.md  Anchor.toml  Cargo.toml  README.md
gacha/app/: .env.example  .gitignore  Dockerfile  fly.toml  package-lock.json  package.json
gacha/app/src/: dividend.ts  health.ts  history.ts  index.ts  jackpot.ts  jupiter.ts  matchmaker.ts  og.ts  pool.ts  randomness.ts  register.ts  tiers.ts  (+1 more)
gacha/programs/gacha/: Cargo.toml
gacha/programs/gacha/src/: errors.rs  events.rs  lib.rs  state.rs
launch-hook/: .gitignore  Anchor.toml  Cargo.toml  README.md  deploy.sh
launch-hook/client/: package.json  setup.ts  tsconfig.json
launch-hook/programs/launch_hook/: Cargo.toml
launch-hook/programs/launch_hook/src/: lib.rs
lit-decrypt/: .env.example  README.md  bootstrap-devnet.ts  bootstrap-mainnet.ts  package.json
lit-decrypt/src/: constants.ts  index.ts  types.ts
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: BountyPot.tsx  ContentCard.tsx  ContentTag.tsx  HeroSection.tsx  LitDecryptViewer.tsx  Nav.tsx  RatioBar.tsx  SwapWidget.tsx  TrendingFeed.tsx
web/gacha-standalone/: main.tsx  polyfill.ts
web/lib/: chipotle.ts  ladderAction.ts  lit.ts  litConditions.ts  mockRatio.ts  registry.ts  solana.ts  trending.ts  types.ts
web/scripts/: chipotle-setup.mjs  fix-lit-contracts-exports.mjs  smoke-lit-offline.mjs  smoke-lit.mjs
web/types/: bs58.d.ts
(+55 files in other folders)
