[workspace]
members = ["programs/*"]
resolver = "2"

# size-optimized so the deploy fits a tight budget (rent ~ binary size)
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.release.build-override]
opt-level = "z"
incremental = false
codegen-units = 1
