[package]
name = "launch_hook"
version = "0.1.0"
description = "Token-2022 transfer hook: vault-skim -> wrap -> Orca 0/0 round-trip"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launch_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
spl-transfer-hook-interface = "0.6.0"
spl-tlv-account-resolution = "0.6.0"
